--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                   <!-- Use the list below to talk about minors, exchanges, extra-curricular activities. -->
                   <ul class="biography-details list-unstyled">
                     <li>Head of marketing for the PRJ5 Live TV Show project</li>
-                    <li>&nbsp; Chose the wrong study</li>
+                    <li>Chose the wrong study</li>
                     <li>Most interested in the business aspact of Creative Business</li>
                   </ul>
                 </div>
@@ -143,10 +143,10 @@
               <!-- 2nd item in education -->
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/school.svg" alt="School logo" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/baldwinsville-01.svg" alt="School logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>High School Diploma, Udens College</h4>
+                  <h4>High School Diploma, Charles W. Baker High School</h4>
                   <h5>2020</h5>
                   <ul class="biography-details list-unstyled">
                     <li>Specialization in economics</li>
@@ -216,24 +216,16 @@
                 <h5 class="language-name w-50">English</h5>
                 <div class="language-level w-50 border border-info border-2 position-relative">
                   <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
-                  <div class="language-progress position-absolute bg-warning h-100 w-75"></div>
-                  <h6 class="position-absolute w-100 text-center top-0 py-1">Full proficiency</h6>
+                  <div class="language-progress position-absolute bg-warning h-100 w-100"></div>
+                  <h6 class="position-absolute w-100 text-center top-0 py-1">Native</h6>
                 </div>
               </li>
               <li class="language-item d-flex mb-1">
                 <h5 class="language-name w-50">Spanish</h5>
                 <div class="language-level w-50 border border-info border-2 position-relative">
                   <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
-                  <div class="language-progress position-absolute bg-warning h-100 w-50"></div>
-                  <h6 class="position-absolute w-100 text-center top-0 py-1">Advanced</h6>
-                </div>
-              </li>
-              <li class="language-item d-flex mb-1">
-                <h5 class="language-name w-50">German</h5>
-                <div class="language-level w-50 border border-info border-2 position-relative">
-                  <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
                   <div class="language-progress position-absolute bg-warning h-100 w-25"></div>
-                  <h6 class="position-absolute w-100 text-center top-0 py-1">Beginner</h6>
+                  <h6 class="position-absolute w-100 text-center top-0 py-1">Moderate</h6>
                 </div>
               </li>
             </ul>
@@ -244,9 +236,10 @@
           <section class="my-3 aside-section">
             <h2>Other Skills</h2>
             <ul class="skill-list list-unstyled">
-              <li class="skill-item">Team player</li>
-              <li class="skill-item">Microsoft Office Power User</li>
+              <li class="skill-item">Adobe Creative Cloud</li>
+              <li class="skill-item">Brewing Beer</li>
               <li class="skill-item">Driving Licence</li>
+			<li class="skill-item">Great cook</li>
             </ul>
           </section>
 
@@ -255,8 +248,9 @@
           <section class="my-3 aside-section">
             <h2>Interests &amp; Hobbies</h2>
             <ul class="skill-list list-unstyled">
-              <li class="skill-item">Formula 1 Driver</li>
-              <li class="skill-item">Netflix Binge-Watcher</li>
+              <li class="skill-item">Cooking</li>
+              <li class="skill-item">Brew beer</li>
+			<li class="skill-item">Drink beer</li>
             </ul>
           </section>
 
