--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               <li class="biography-item row mb-2">
                 <!-- We're using a grid inside a grid so we can align logos and text -->
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/Frontaal.svg" alt="Frontaal" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/Frontaal.jpg" alt="Frontaal" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>Barkeeper, Brouwerij Frontaal</h4>
@@ -103,7 +103,7 @@
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
                 <!-- We're using a grid inside a grid so we can align logos and text -->
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/Desem.svg" alt="Desem" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/Desem.jpg" alt="Desem" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>Waiter, Pizzacafe Desem&nbsp;</h4>
@@ -143,7 +143,7 @@
               <!-- 2nd item in education -->
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/Baldwinsville.svg" alt="Baldwinsville" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/Baldwinsville.jpg" alt="Baldwinsville" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>High School Diploma, Charles W. Baker High School</h4>
